Phase_4/src/ply_version/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR
    DO
    FOR
    MAIN
    PLUSASSIGN

Grammar

Rule 0     S' -> start
Rule 1     start -> ClassDeclaration
Rule 2     start -> empty
Rule 3     start -> exp
Rule 4     ClassDeclaration -> CLASS IDENTIFIER LBRACE RBRACE
Rule 5     ClassDeclaration -> CLASS IDENTIFIER LBRACE MethodDeclaration RBRACE
Rule 6     ClassDeclaration -> CLASS IDENTIFIER LBRACE FieldDeclaration RBRACE
Rule 7     FieldDeclaration -> Declarators IDENTIFIER SEMICOLON
Rule 8     MethodDeclaration -> Declarators IDENTIFIER LPAREN RPAREN LBRACE statement RBRACE
Rule 9     MethodDeclaration -> Declarators IDENTIFIER LPAREN RPAREN LBRACE statement RETURN exp SEMICOLON RBRACE
Rule 10    MethodDeclaration -> Declarators IDENTIFIER LPAREN ParameterList RPAREN LBRACE statement RETURN exp SEMICOLON RBRACE
Rule 11    MethodDeclaration -> Declarators IDENTIFIER LPAREN ParameterList RPAREN LBRACE statement RBRACE
Rule 12    ParameterList -> Type IDENTIFIER
Rule 13    ParameterList -> Type IDENTIFIER COMMA Type IDENTIFIER
Rule 14    Declarators -> Type
Rule 15    Declarators -> STATIC Type
Rule 16    Declarators -> PUBLIC Type
Rule 17    Declarators -> PRIVATE Type
Rule 18    Declarators -> PUBLIC STATIC Type
Rule 19    Declarators -> PRIVATE STATIC Type
Rule 20    Type -> PrimeType
Rule 21    Type -> ClassType
Rule 22    Type -> arraytype
Rule 23    PrimeType -> INT
Rule 24    PrimeType -> BOOLEAN
Rule 25    PrimeType -> VOID
Rule 26    PrimeType -> FLOAT
Rule 27    ClassType -> IDENTIFIER
Rule 28    arraytype -> INT LBRACKET RBRACKET
Rule 29    arraytype -> ClassType LBRACKET RBRACKET
Rule 30    argumentlist -> exp
Rule 31    argumentlist -> exp COMMA exp
Rule 32    Refrence -> THIS
Rule 33    Refrence -> IDENTIFIER
Rule 34    statement -> empty
Rule 35    statement -> if_st
Rule 36    statement -> while_st
Rule 37    statement -> LBRACE statement RBRACE
Rule 38    statement -> Refrence LPAREN argumentlist RPAREN
Rule 39    statement -> Refrence LPAREN RPAREN SEMICOLON
Rule 40    statement -> Refrence LBRACKET exp RBRACKET ASSIGN exp SEMICOLON
Rule 41    statement -> Refrence ASSIGN exp SEMICOLON
Rule 42    statement -> PrimeType IDENTIFIER ASSIGN IDENTIFIER SEMICOLON
Rule 43    statement -> PrimeType IDENTIFIER ASSIGN exp SEMICOLON
Rule 44    statement -> statement statement
Rule 45    statement -> exp
Rule 46    while_st -> WHILE LPAREN exp RPAREN statement
Rule 47    if_st -> IF LPAREN exp RPAREN statement ELSE statement
Rule 48    if_st -> IF LPAREN exp RPAREN statement
Rule 49    exp -> <empty>
Rule 50    exp -> exp Binop exp
Rule 51    exp -> IDENTIFIER
Rule 52    exp -> Type exp
Rule 53    exp -> Refrence LBRACKET exp RBRACKET
Rule 54    exp -> Refrence LPAREN RPAREN
Rule 55    exp -> Refrence LPAREN argumentlist RPAREN
Rule 56    exp -> Unop exp
Rule 57    exp -> LPAREN exp RPAREN
Rule 58    exp -> TRUE
Rule 59    exp -> IDENTIFIER Binop NUMBER
Rule 60    exp -> FALSE
Rule 61    exp -> NEW IDENTIFIER LPAREN RPAREN
Rule 62    exp -> NEW INT LBRACKET exp RBRACKET
Rule 63    exp -> NEW IDENTIFIER LBRACKET exp RBRACKET
Rule 64    exp -> NUMBER Binop NUMBER
Rule 65    exp -> NUMBER Binop float
Rule 66    exp -> float Binop NUMBER
Rule 67    exp -> float Binop float
Rule 68    Unop -> NOT
Rule 69    Unop -> MINUS
Rule 70    float -> NUMBER COMMA NUMBER
Rule 71    Binop -> PLUS
Rule 72    Binop -> MINUS
Rule 73    Binop -> TIMES
Rule 74    Binop -> DIVIDE
Rule 75    Binop -> EQ
Rule 76    Binop -> NOT_EQ
Rule 77    Binop -> LT
Rule 78    Binop -> GT
Rule 79    Binop -> LE
Rule 80    Binop -> GE
Rule 81    Binop -> AND
Rule 82    Binop -> NOT
Rule 83    empty -> <empty>

Terminals, with rules where they appear

AND                  : 81
ASSIGN               : 40 41 42 43
BOOLEAN              : 24
CHAR                 : 
CLASS                : 4 5 6
COMMA                : 13 31 70
DIVIDE               : 74
DO                   : 
ELSE                 : 47
EQ                   : 75
FALSE                : 60
FLOAT                : 26
FOR                  : 
GE                   : 80
GT                   : 78
IDENTIFIER           : 4 5 6 7 8 9 10 11 12 13 13 27 33 42 42 43 51 59 61 63
IF                   : 47 48
INT                  : 23 28 62
LBRACE               : 4 5 6 8 9 10 11 37
LBRACKET             : 28 29 40 53 62 63
LE                   : 79
LPAREN               : 8 9 10 11 38 39 46 47 48 54 55 57 61
LT                   : 77
MAIN                 : 
MINUS                : 69 72
NEW                  : 61 62 63
NOT                  : 68 82
NOT_EQ               : 76
NUMBER               : 59 64 64 65 66 70 70
PLUS                 : 71
PLUSASSIGN           : 
PRIVATE              : 17 19
PUBLIC               : 16 18
RBRACE               : 4 5 6 8 9 10 11 37
RBRACKET             : 28 29 40 53 62 63
RETURN               : 9 10
RPAREN               : 8 9 10 11 38 39 46 47 48 54 55 57 61
SEMICOLON            : 7 9 10 39 40 41 42 43
STATIC               : 15 18 19
THIS                 : 32
TIMES                : 73
TRUE                 : 58
VOID                 : 25
WHILE                : 46
error                : 

Nonterminals, with rules where they appear

Binop                : 50 59 64 65 66 67
ClassDeclaration     : 1
ClassType            : 21 29
Declarators          : 7 8 9 10 11
FieldDeclaration     : 6
MethodDeclaration    : 5
ParameterList        : 10 11
PrimeType            : 20 42 43
Refrence             : 38 39 40 41 53 54 55
Type                 : 12 13 13 14 15 16 17 18 19 52
Unop                 : 56
argumentlist         : 38 55
arraytype            : 22
empty                : 2 34
exp                  : 3 9 10 30 31 31 40 40 41 43 45 46 47 48 50 50 52 53 56 57 62 63
float                : 65 66 67 67
if_st                : 35
start                : 0
statement            : 8 9 10 11 37 44 44 46 47 47 48
while_st             : 36

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . ClassDeclaration
    (2) start -> . empty
    (3) start -> . exp
    (4) ClassDeclaration -> . CLASS IDENTIFIER LBRACE RBRACE
    (5) ClassDeclaration -> . CLASS IDENTIFIER LBRACE MethodDeclaration RBRACE
    (6) ClassDeclaration -> . CLASS IDENTIFIER LBRACE FieldDeclaration RBRACE
    (83) empty -> .
    (49) exp -> .
    (50) exp -> . exp Binop exp
    (51) exp -> . IDENTIFIER
    (52) exp -> . Type exp
    (53) exp -> . Refrence LBRACKET exp RBRACKET
    (54) exp -> . Refrence LPAREN RPAREN
    (55) exp -> . Refrence LPAREN argumentlist RPAREN
    (56) exp -> . Unop exp
    (57) exp -> . LPAREN exp RPAREN
    (58) exp -> . TRUE
    (59) exp -> . IDENTIFIER Binop NUMBER
    (60) exp -> . FALSE
    (61) exp -> . NEW IDENTIFIER LPAREN RPAREN
    (62) exp -> . NEW INT LBRACKET exp RBRACKET
    (63) exp -> . NEW IDENTIFIER LBRACKET exp RBRACKET
    (64) exp -> . NUMBER Binop NUMBER
    (65) exp -> . NUMBER Binop float
    (66) exp -> . float Binop NUMBER
    (67) exp -> . float Binop float
    (20) Type -> . PrimeType
    (21) Type -> . ClassType
    (22) Type -> . arraytype
    (32) Refrence -> . THIS
    (33) Refrence -> . IDENTIFIER
    (68) Unop -> . NOT
    (69) Unop -> . MINUS
    (70) float -> . NUMBER COMMA NUMBER
    (23) PrimeType -> . INT
    (24) PrimeType -> . BOOLEAN
    (25) PrimeType -> . VOID
    (26) PrimeType -> . FLOAT
    (27) ClassType -> . IDENTIFIER
    (28) arraytype -> . INT LBRACKET RBRACKET
    (29) arraytype -> . ClassType LBRACKET RBRACKET

  ! reduce/reduce conflict for $end resolved using rule 49 (exp -> .)
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    CLASS           shift and go to state 5
    PLUS            reduce using rule 49 (exp -> .)
    TIMES           reduce using rule 49 (exp -> .)
    DIVIDE          reduce using rule 49 (exp -> .)
    EQ              reduce using rule 49 (exp -> .)
    NOT_EQ          reduce using rule 49 (exp -> .)
    LT              reduce using rule 49 (exp -> .)
    GT              reduce using rule 49 (exp -> .)
    LE              reduce using rule 49 (exp -> .)
    GE              reduce using rule 49 (exp -> .)
    AND             reduce using rule 49 (exp -> .)
    $end            reduce using rule 49 (exp -> .)
    IDENTIFIER      shift and go to state 6
    LPAREN          shift and go to state 9
    TRUE            shift and go to state 11
    FALSE           shift and go to state 13
    NEW             shift and go to state 14
    NUMBER          shift and go to state 12
    THIS            shift and go to state 20
    NOT             shift and go to state 21
    MINUS           shift and go to state 22
    INT             shift and go to state 15
    BOOLEAN         shift and go to state 23
    VOID            shift and go to state 24
    FLOAT           shift and go to state 25

  ! $end            [ reduce using rule 83 (empty -> .) ]
  ! MINUS           [ reduce using rule 49 (exp -> .) ]
  ! NOT             [ reduce using rule 49 (exp -> .) ]

    start                          shift and go to state 1
    ClassDeclaration               shift and go to state 2
    empty                          shift and go to state 3
    exp                            shift and go to state 4
    Type                           shift and go to state 7
    Refrence                       shift and go to state 8
    Unop                           shift and go to state 10
    float                          shift and go to state 16
    PrimeType                      shift and go to state 17
    ClassType                      shift and go to state 18
    arraytype                      shift and go to state 19

state 1

    (0) S' -> start .



state 2

    (1) start -> ClassDeclaration .

    $end            reduce using rule 1 (start -> ClassDeclaration .)


state 3

    (2) start -> empty .

    $end            reduce using rule 2 (start -> empty .)


state 4

    (3) start -> exp .
    (50) exp -> exp . Binop exp
    (71) Binop -> . PLUS
    (72) Binop -> . MINUS
    (73) Binop -> . TIMES
    (74) Binop -> . DIVIDE
    (75) Binop -> . EQ
    (76) Binop -> . NOT_EQ
    (77) Binop -> . LT
    (78) Binop -> . GT
    (79) Binop -> . LE
    (80) Binop -> . GE
    (81) Binop -> . AND
    (82) Binop -> . NOT

    $end            reduce using rule 3 (start -> exp .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    TIMES           shift and go to state 29
    DIVIDE          shift and go to state 30
    EQ              shift and go to state 31
    NOT_EQ          shift and go to state 32
    LT              shift and go to state 33
    GT              shift and go to state 34
    LE              shift and go to state 35
    GE              shift and go to state 36
    AND             shift and go to state 37
    NOT             shift and go to state 38

    Binop                          shift and go to state 26

state 5

    (4) ClassDeclaration -> CLASS . IDENTIFIER LBRACE RBRACE
    (5) ClassDeclaration -> CLASS . IDENTIFIER LBRACE MethodDeclaration RBRACE
    (6) ClassDeclaration -> CLASS . IDENTIFIER LBRACE FieldDeclaration RBRACE

    IDENTIFIER      shift and go to state 39


state 6

    (51) exp -> IDENTIFIER .
    (59) exp -> IDENTIFIER . Binop NUMBER
    (33) Refrence -> IDENTIFIER .
    (27) ClassType -> IDENTIFIER .
    (71) Binop -> . PLUS
    (72) Binop -> . MINUS
    (73) Binop -> . TIMES
    (74) Binop -> . DIVIDE
    (75) Binop -> . EQ
    (76) Binop -> . NOT_EQ
    (77) Binop -> . LT
    (78) Binop -> . GT
    (79) Binop -> . LE
    (80) Binop -> . GE
    (81) Binop -> . AND
    (82) Binop -> . NOT

  ! reduce/reduce conflict for LPAREN resolved using rule 33 (Refrence -> IDENTIFIER .)
  ! reduce/reduce conflict for LBRACKET resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for IDENTIFIER resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for LPAREN resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for TRUE resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for FALSE resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for NEW resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for NUMBER resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for THIS resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for NOT resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for MINUS resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for INT resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for BOOLEAN resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for VOID resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for FLOAT resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for PLUS resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for TIMES resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for DIVIDE resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for EQ resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for NOT_EQ resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for LT resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for GT resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for LE resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for GE resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for AND resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for $end resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for RPAREN resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for COMMA resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for RBRACE resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for RETURN resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for LBRACE resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for IF resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for WHILE resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for ELSE resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 27 (ClassType -> IDENTIFIER .)
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for EQ resolved as shift
  ! shift/reduce conflict for NOT_EQ resolved as shift
  ! shift/reduce conflict for LT resolved as shift
  ! shift/reduce conflict for GT resolved as shift
  ! shift/reduce conflict for LE resolved as shift
  ! shift/reduce conflict for GE resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
    LBRACKET        reduce using rule 27 (ClassType -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 27 (ClassType -> IDENTIFIER .)
    LPAREN          reduce using rule 27 (ClassType -> IDENTIFIER .)
    TRUE            reduce using rule 27 (ClassType -> IDENTIFIER .)
    FALSE           reduce using rule 27 (ClassType -> IDENTIFIER .)
    NEW             reduce using rule 27 (ClassType -> IDENTIFIER .)
    NUMBER          reduce using rule 27 (ClassType -> IDENTIFIER .)
    THIS            reduce using rule 27 (ClassType -> IDENTIFIER .)
    INT             reduce using rule 27 (ClassType -> IDENTIFIER .)
    BOOLEAN         reduce using rule 27 (ClassType -> IDENTIFIER .)
    VOID            reduce using rule 27 (ClassType -> IDENTIFIER .)
    FLOAT           reduce using rule 27 (ClassType -> IDENTIFIER .)
    $end            reduce using rule 27 (ClassType -> IDENTIFIER .)
    RPAREN          reduce using rule 27 (ClassType -> IDENTIFIER .)
    RBRACKET        reduce using rule 27 (ClassType -> IDENTIFIER .)
    COMMA           reduce using rule 27 (ClassType -> IDENTIFIER .)
    RBRACE          reduce using rule 27 (ClassType -> IDENTIFIER .)
    RETURN          reduce using rule 27 (ClassType -> IDENTIFIER .)
    LBRACE          reduce using rule 27 (ClassType -> IDENTIFIER .)
    IF              reduce using rule 27 (ClassType -> IDENTIFIER .)
    WHILE           reduce using rule 27 (ClassType -> IDENTIFIER .)
    ELSE            reduce using rule 27 (ClassType -> IDENTIFIER .)
    SEMICOLON       reduce using rule 27 (ClassType -> IDENTIFIER .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    TIMES           shift and go to state 29
    DIVIDE          shift and go to state 30
    EQ              shift and go to state 31
    NOT_EQ          shift and go to state 32
    LT              shift and go to state 33
    GT              shift and go to state 34
    LE              shift and go to state 35
    GE              shift and go to state 36
    AND             shift and go to state 37
    NOT             shift and go to state 38

  ! PLUS            [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! MINUS           [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! TIMES           [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! DIVIDE          [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! EQ              [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! NOT_EQ          [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! LT              [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! GT              [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! LE              [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! GE              [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! AND             [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! NOT             [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! $end            [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! RPAREN          [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! RBRACKET        [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! COMMA           [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! RBRACE          [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! RETURN          [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! LBRACE          [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! IF              [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! WHILE           [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! THIS            [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! IDENTIFIER      [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! INT             [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! BOOLEAN         [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! VOID            [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! FLOAT           [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! LPAREN          [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! TRUE            [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! FALSE           [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! NEW             [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! NUMBER          [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! ELSE            [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! SEMICOLON       [ reduce using rule 51 (exp -> IDENTIFIER .) ]
  ! LBRACKET        [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! LPAREN          [ reduce using rule 33 (Refrence -> IDENTIFIER .) ]
  ! NOT             [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]
  ! MINUS           [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]
  ! PLUS            [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]
  ! TIMES           [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]
  ! DIVIDE          [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]
  ! EQ              [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]
  ! NOT_EQ          [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]
  ! LT              [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]
  ! GT              [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]
  ! LE              [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]
  ! GE              [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]
  ! AND             [ reduce using rule 27 (ClassType -> IDENTIFIER .) ]

    Binop                          shift and go to state 40

state 7

    (52) exp -> Type . exp
    (49) exp -> .
    (50) exp -> . exp Binop exp
    (51) exp -> . IDENTIFIER
    (52) exp -> . Type exp
    (53) exp -> . Refrence LBRACKET exp RBRACKET
    (54) exp -> . Refrence LPAREN RPAREN
    (55) exp -> . Refrence LPAREN argumentlist RPAREN
    (56) exp -> . Unop exp
    (57) exp -> . LPAREN exp RPAREN
    (58) exp -> . TRUE
    (59) exp -> . IDENTIFIER Binop NUMBER
    (60) exp -> . FALSE
    (61) exp -> . NEW IDENTIFIER LPAREN RPAREN
    (62) exp -> . NEW INT LBRACKET exp RBRACKET
    (63) exp -> . NEW IDENTIFIER LBRACKET exp RBRACKET
    (64) exp -> . NUMBER Binop NUMBER
    (65) exp -> . NUMBER Binop float
    (66) exp -> . float Binop NUMBER
    (67) exp -> . float Binop float
    (20) Type -> . PrimeType
    (21) Type -> . ClassType
    (22) Type -> . arraytype
    (32) Refrence -> . THIS
    (33) Refrence -> . IDENTIFIER
    (68) Unop -> . NOT
    (69) Unop -> . MINUS
    (70) float -> . NUMBER COMMA NUMBER
    (23) PrimeType -> . INT
    (24) PrimeType -> . BOOLEAN
    (25) PrimeType -> . VOID
    (26) PrimeType -> . FLOAT
    (27) ClassType -> . IDENTIFIER
    (28) arraytype -> . INT LBRACKET RBRACKET
    (29) arraytype -> . ClassType LBRACKET RBRACKET

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
  ! shift/reduce conflict for NEW resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
  ! shift/reduce conflict for THIS resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for BOOLEAN resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
    PLUS            reduce using rule 49 (exp -> .)
    TIMES           reduce using rule 49 (exp -> .)
    DIVIDE          reduce using rule 49 (exp -> .)
    EQ              reduce using rule 49 (exp -> .)
    NOT_EQ          reduce using rule 49 (exp -> .)
    LT              reduce using rule 49 (exp -> .)
    GT              reduce using rule 49 (exp -> .)
    LE              reduce using rule 49 (exp -> .)
    GE              reduce using rule 49 (exp -> .)
    AND             reduce using rule 49 (exp -> .)
    $end            reduce using rule 49 (exp -> .)
    RPAREN          reduce using rule 49 (exp -> .)
    RBRACKET        reduce using rule 49 (exp -> .)
    COMMA           reduce using rule 49 (exp -> .)
    RBRACE          reduce using rule 49 (exp -> .)
    RETURN          reduce using rule 49 (exp -> .)
    LBRACE          reduce using rule 49 (exp -> .)
    IF              reduce using rule 49 (exp -> .)
    WHILE           reduce using rule 49 (exp -> .)
    ELSE            reduce using rule 49 (exp -> .)
    SEMICOLON       reduce using rule 49 (exp -> .)
    IDENTIFIER      shift and go to state 6
    LPAREN          shift and go to state 9
    TRUE            shift and go to state 11
    FALSE           shift and go to state 13
    NEW             shift and go to state 14
    NUMBER          shift and go to state 12
    THIS            shift and go to state 20
    NOT             shift and go to state 21
    MINUS           shift and go to state 22
    INT             shift and go to state 15
    BOOLEAN         shift and go to state 23
    VOID            shift and go to state 24
    FLOAT           shift and go to state 25

  ! MINUS           [ reduce using rule 49 (exp -> .) ]
  ! NOT             [ reduce using rule 49 (exp -> .) ]
  ! THIS            [ reduce using rule 49 (exp -> .) ]
  ! IDENTIFIER      [ reduce using rule 49 (exp -> .) ]
  ! INT             [ reduce using rule 49 (exp -> .) ]
  ! BOOLEAN         [ reduce using rule 49 (exp -> .) ]
  ! VOID            [ reduce using rule 49 (exp -> .) ]
